services/go-nodejs-pet-id/app-vue/openshift/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-id-frontend
  labels:
    app: pet-id-frontend
    deployment: pet-id-frontend
    app.kubernetes.io/name: pet-id-frontend
    app.kubernetes.io/part-of: pet-id
    component: pet-id-frontend-deployment
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"pet-id-backend"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-id-frontend
      deployment: pet-id-frontend
      component: pet-id-frontend-deployment
  template:
    metadata:
      labels:
        app: pet-id-frontend
        deployment: pet-id-frontend
        component: pet-id-frontend-deployment
    spec:
      containers:
      - name: pet-id-frontend
        imagePullPolicy: Always
        image: quay.io/kenmoini/pet-id-frontend:latest
        ports:
        - containerPort: 8080
          name: pet-id-frontend
          protocol: TCP
