services/go-nodejs-pet-id/app-vue/openshift/02-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    description: The PetID Vue SPA web server's http port.
  labels:
    app: pet-id-frontend
    app.kubernetes.io/part-of: pet-id-frontend
    component: pet-id-frontend-service
  name: pet-id-frontend
spec:
  ports:
    - name: pet-id-frontend
      protocol: TCP
      port: 8080
      targetPort: pet-id-frontend
  selector:
    app: pet-id-frontend
  type: ClusterIP
