services/go-nodejs-pet-id/app-vue/openshift/03-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pet-id-frontend
  labels:
    app: pet-id
    app.kubernetes.io/part-of: pet-id
    component: route
spec:
  to:
    kind: Service
    name: pet-id-frontend
    weight: 100
  port:
    targetPort: pet-id-frontend
  tls:
    termination: reencrypt
  wildcardPolicy: None
